<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RideWithMe</string>
    <string name="action_settings">Settings</string>
    <string name="title">Ride With Me!</string>
    <string name="email">Email: </string>
    <string name ="taxTag">Tax Information</string>
    
    
    <string name="password">Password: </string>
    <string name="loginEmail">Enter Email</string>
    <string name="loginPassword">Enter Password</string>
    <string name="loginButton">Login</string>
    <string name="signUpButton">Sign Up</string>
    
    
    <string name="title_activity_my_carpool">MyCarpoolActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="look">Look for Carpool</string>
    <string name="start">Start a Carpool</string>
    <string name="myCarpool">My Carpools: </string>
    
    
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="name">First Name:</string>
    <string name="enterName">Enter Name:</string>
    <string name="signupButton">Sign Up</string>
    <string name="confirmPassword">Confirm Password:</string>
    
    <string name="pickupTag">Pick Up Location:</string>
    <string name ="zipCodeTag">Enter Zip Code</string>
    <string name ="dropoffTag">Drop Off Location:</string>
    <string name ="zipCodeTag">Enter Zip Code</string>
    
    <string name ="createCarpool">Create Carpool</string>
    
    <string name ="pickupHintTime">Pick Up Time</string>
    <string name ="dropoffHintTime">Drop Off Time</string>
    <string name ="carCapacityHint">Car Capacity</string>
    
    
    
    <string-array name="time_array">
        <item>12:00AM</item>
        <item>12:15AM</item>
        <item>12:30AM</item>
        <item>12:45AM</item>
        <item>01:00AM</item>
        <item>01:15AM</item>
        <item>01:30AM</item>
        <item>01:45AM</item>
        <item>02:00AM</item>
        <item>02:15AM</item>
        <item>02:30AM</item>
        <item>02:45AM</item>
        <item>03:00AM</item>
        <item>03:15AM</item>
        <item>03:30AM</item>
        <item>03:45AM</item>
        <item>04:00AM</item>
        <item>04:15AM</item>
        <item>04:30AM</item>
        <item>04:45AM</item>
        <item>05:00AM</item>
        <item>05:15AM</item>
        <item>05:30AM</item>
        <item>05:45AM</item>
        <item>06:00AM</item>
        <item>06:15AM</item>
        <item>06:30AM</item>
        <item>06:45AM</item>
        <item>07:00AM</item>
        <item>07:15AM</item>
        <item>07:30AM</item>
        <item>07:45AM</item>
        <item>08:00AM</item>
        <item>08:15AM</item>
        <item>08:30AM</item>
        <item>08:45AM</item>
        <item>09:00AM</item>
        <item>09:15AM</item>
        <item>09:30AM</item>
        <item>09:45AM</item>
        <item>10:00AM</item>
        <item>10:15AM</item>
        <item>10:30AM</item>
        <item>10:45AM</item>
        <item>11:00AM</item>
        <item>11:15AM</item>
        <item>11:30AM</item>
        <item>11:45AM</item>
        <item>12:00PM</item>
        <item>12:15PM</item>
        <item>12:30PM</item>
        <item>12:45PM</item>
        <item>01:00PM</item>
        <item>01:15PM</item>
        <item>01:30PM</item>
        <item>01:45PM</item>
        <item>02:00PM</item>
        <item>02:15PM</item>
        <item>02:30PM</item>
        <item>02:45PM</item>
        <item>03:00PM</item>
        <item>03:15PM</item>
        <item>03:30PM</item>
        <item>03:45PM</item>
        <item>04:00PM</item>
        <item>04:15PM</item>
        <item>04:30PM</item>
        <item>04:45PM</item>
        <item>05:00PM</item>
        <item>05:15PM</item>
        <item>05:30PM</item>
        <item>05:45PM</item>
        <item>06:00PM</item>
        <item>06:15PM</item>
        <item>06:30PM</item>
        <item>06:45PM</item>
        <item>07:00PM</item>
        <item>07:15PM</item>
        <item>07:30PM</item>
        <item>07:45PM</item>
        <item>08:00PM</item>
        <item>08:15PM</item>
        <item>08:30PM</item>
        <item>08:45PM</item>
        <item>09:00PM</item>
        <item>09:15PM</item>
        <item>09:30PM</item>
        <item>09:45PM</item>
        <item>10:00PM</item>
        <item>10:15PM</item>
        <item>10:30PM</item>
        <item>10:45PM</item>
        <item>11:00PM</item>
        <item>11:15PM</item>
        <item>11:30PM</item>
        <item>11:45PM</item>
        
    </string-array>
    
    <string-array name="car_capacity_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
        <string name="results">results</string>
        
        
        <string name ="taxIncentives">Tax Incentives</string>
        <string name ="taxIncentivesInfo">The federal tax code allows employers to offer tax free benefits for the purposes of taking transit, vanpooling and 

paying for parking - Section 132 (f) of the Internal Revenue Code. These “Qualified Transportation Fringe Benefits” 

are deducted from corporate gross income for taxes paid by the employer. Both employers and employees save on 

taxes because neither pays federal income or payroll taxes on these benefits.</string>
	<string name ="taxLimits">There are limits on the value that are regarded as pre-tax or tax free</string>
	<string name ="taxLimitsInfo1">- As of January 1, 2010 up to $230 is excludable from gross income per month for vanpooling, transit and parking.</string>
	<string name ="taxLimitsInfo2">- The employer can provide parking benefit with transportation benefits. As long as total does not exceed $460</string>
	<string name ="taxLimitsInfo3">- Up to $20 is allowed for bicycling expenditures</string>
	<string name ="taxLimitsInfo4">- Any amount exceeding ceiling is income</string>
	<string name ="taxBenefits">Employee Benefit and Tax Reporting</string>
	<string name ="taxBenefitsInfo1">- Qualified transportation fringe benefits that do not exceed statutory limit are not wages for Federal Insurance 

Contributions ACT (FICA), Federal Unemployment Tax ACT (FUTA) and federal income tax withholding</string>
	<string name ="taxBenefitsInfo2">- The total amount is not reported on the employees’ W-2 form</string>
	
	
</resources>


