<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
   android:id="@+id/tableLayout" android:layout_width="match_parent" 
   android:layout_height="match_parent" android:padding="5dp" 
   android:stretchColumns="*" android:background="@android:color/white">

    
    <!-- tableRow0 -->
      <TableRow
       android:id="@+id/tableRow0"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center" >

      <TextView
       		 android:layout_width="wrap_content"
       		 android:layout_height="wrap_content"
       		 android:layout_gravity="center"
       		 android:textSize="24sp"
      		 android:text="@string/title" />
   </TableRow>
   
   <TableRow android:id="@+id/tableRow1" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
      <TextView
       		 android:layout_width="wrap_content"
       		 android:layout_height="wrap_content"
      		 android:text="@string/email" />
   </TableRow>
   <TableRow android:id="@+id/tableRow2" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
      <EditText android:layout_width="match_parent" 
         android:layout_height="wrap_content" android:layout_span="2" 
         android:inputType="text" android:id="@+id/enterEmail"  
         android:hint="@string/loginEmail" 
         android:imeOptions="actionNext">
      </EditText>
   </TableRow>
   
   <TableRow android:id="@+id/tableRow3" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
      <TextView
       		 android:layout_width="wrap_content"
       		 android:layout_height="wrap_content"
      		 android:text="@string/password" />
   </TableRow>
   <TableRow android:id="@+id/tableRow4" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent">
      <EditText android:layout_width="match_parent" 
         android:layout_height="wrap_content" android:layout_span="2" 
         android:inputType="textPassword" android:id="@+id/enterPassword"  
         android:hint="@string/loginPassword" 
         android:imeOptions="actionNext">
      </EditText>
   </TableRow>

   <TableRow
       android:id="@+id/tableRow5"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:gravity="center" >

      <Button
          android:id="@+id/loginButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:gravity="center"
          android:onClick="loginAction"
          android:text="@string/loginButton"
          android:width="200dp" >

</Button>
   </TableRow>
   
   <TableRow android:id="@+id/tableRow10" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent"
      android:gravity="center">

      <Button
          android:id="@+id/signUpButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:onClick="signUpAction"
          android:text="@string/signUpButton"
          android:width="200dp" >
</Button>
   </TableRow>
   		   

</TableLayout>